objects/CM_Activation_Log__c.object
<CustomObject>
    <fields>
        <fullName>ptt_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CM Activation Logs</relationshipLabel>
        <relationshipName>CM_Activation_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Account_readonly__c</fullName>
        <formula>ptt_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Activation__c</fullName>
        <label>Activation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_End_User_Data__c</fullName>
        <label>End User Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Order_readonly__c</fullName>
        <formula>ptt_cm_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Selected_Packages__c</fullName>
        <label>Selected Packages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_cm_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CM Order</label>
        <referenceTo>ptt_cm_Order__c</referenceTo>
        <relationshipLabel>CM Activation Logs</relationshipLabel>
        <relationshipName>CM_Activation_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_do_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>do Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is checked when Error was logged.</description>
        <inlineHelpText>It is checked when Error was logged.</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <label>PT - CM Activation Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ptt_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_counter_resets</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account_readonly__c</columns>
        <columns>ptt_Activation__c</columns>
        <columns>ptt_Comment__c</columns>
        <columns>ptt_Order_readonly__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_do_Reset__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All counter resets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_license_generation</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account_readonly__c</columns>
        <columns>ptt_Activation__c</columns>
        <columns>ptt_Comment__c</columns>
        <columns>ptt_Order_readonly__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_do_Reset__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All license generation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AL-{00000}</displayFormat>
        <label>CM Activation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Activation Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>